# NocoUI

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  NocoEditor.sln  NocoUI.vcxproj  NocoUI.vcxproj.filters  README.md  future_extensions.md  keyframe_anim.md  missing_features.md  practical_extensions.md  props.md  props_alternatives.md  toolkit_approach.md
.github/workflows/: ci.yml
NocoEditor/: Main.cpp  NocoEditor.vcxproj  NocoEditor.vcxproj.filters
NocoEditor/NocoUI/: Anchor.hpp  Canvas.hpp  InheritChildrenStateFlags.hpp  MouseTracker.hpp  Node.hpp  PropertyValue.hpp  ScrollableAxisFlags.hpp  Smoothing.hpp  YN.hpp  magic_enum.hpp
NocoEditor/NocoUI/Component/: ComponentBase.hpp  DrawerComponent.hpp  RectRenderer.hpp  Sprite.hpp  UpdaterComponent.hpp
NocoEditor/NocoUI/Constraint/: BoxConstraint.hpp  Constraint.hpp
NocoEditor/NocoUI/Layout/: FlowLayout.hpp  HorizontalLayout.hpp  VerticalLayout.hpp
NocoEditor/NocoUI/include/: NocoUI.hpp
NocoEditor/NocoUI/include/NocoUI/: InteractState.hpp  Property.hpp
NocoEditor/NocoUI/include/NocoUI/Component/: TextBox.hpp
NocoEditor/src/: Node.cpp
NocoEditor/src/Component/: Sprite.cpp  TextBox.cpp
NocoEditor/src/Layout/: FlowLayout.cpp  HorizontalLayout.cpp  VerticalLayout.cpp
cmake/macos/: FindSiv3D.cmake
editor/: .gitignore  NocoEditor.sln
editor/NocoEditor/: AddParamDialog.hpp  CMakeLists.txt  CheckboxToggler.hpp  ColorPropertyTextBox.hpp  ComponentSchema.hpp  ComponentSchemaLoader.cpp  ComponentSchemaLoader.hpp  ContextMenu.hpp  Defaults.hpp  Dialog.cpp  Dialog.hpp  EditorButton.cpp  EditorButton.hpp  EditorColor.hpp  EditorDefaults.hpp  EditorDialog.cpp  EditorDialog.hpp  EditorEnums.hpp  EditorTypes.hpp  EditorUtility.cpp  EditorUtility.hpp  EditorYN.hpp  EnumPropertyComboBox.hpp  Hierarchy.cpp  Hierarchy.hpp  HistorySystem.cpp  HistorySystem.hpp  Info.plist  InputBlocker.hpp  Inspector.cpp  Inspector.hpp  KeyInputBlocker.hpp  LRTBPropertyTextBox.hpp  Main.cpp  Menu.cpp  Menu.hpp  MenuBar.hpp  NocoEditor.vcxproj  NocoEditor.vcxproj.filters  ParamRefDialog.hpp  (+25 more)
examples/PlayerNameDialog/: Main.cpp  PlayerNameDialog.noco
include/: NocoUI.hpp
include/NocoUI/: Anchor.hpp  Asset.hpp  Canvas.hpp  ComponentFactory.hpp  DefaultFont.hpp  Enums.hpp  FirstActiveLifecycleCompletedFlags.hpp  INodeContainer.hpp  IdRegistry.hpp  InheritChildrenStateFlags.hpp  Init.hpp  InteractionState.hpp  LRTB.hpp  MouseTracker.hpp  Node.hpp  Param.hpp  ParamUtils.hpp  Property.hpp  PropertyUtils.hpp  PropertyValue.hpp  ScrollableAxisFlags.hpp  Serialization.hpp  Smoothing.hpp  Transform.hpp  TransformEffect.hpp  Utility.hpp  Version.hpp  YN.hpp  pch.hpp
include/NocoUI/Component/: AudioPlayer.hpp  Component.hpp  ComponentBase.hpp  CursorChanger.hpp  DataStore.hpp  DragDropSource.hpp  DragDropTarget.hpp  DrawerComponent.hpp  EventTrigger.hpp  HotKeyInputHandler.hpp  IFocusable.hpp  IFontCachedComponent.hpp  ITextBox.hpp  InputBlocker.hpp  InputUpdaterComponent.hpp  KeyInputClearer.hpp  KeyInputUpdaterComponent.hpp  Label.hpp  Placeholder.hpp  PlaceholderComponent.hpp  RectRenderer.hpp  ShapeRenderer.hpp  ShortcutInputHandler.hpp  Sprite.hpp  SubCanvas.hpp  TextArea.hpp  TextBox.hpp  TextureFontLabel.hpp  Toggle.hpp  Tween.hpp  UISound.hpp  UpdaterComponent.hpp
include/NocoUI/Constraint/: AnchorConstraint.hpp  BoxConstraint.hpp
include/NocoUI/Layout/: FlowLayout.hpp  HorizontalLayout.hpp  Layout.hpp  VerticalLayout.hpp
include/NocoUI/Region/: AnchorRegion.hpp  InlineRegion.hpp  Region.hpp
include/NocoUI/detail/: Input.hpp  ScopedScissorRect.hpp
src/: Asset.cpp  Canvas.cpp  ComponentFactory.cpp  IdRegistry.cpp  Init.cpp  Node.cpp  Param.cpp  Serialization.cpp  Transform.cpp  TransformEffect.cpp  Utility.cpp
src/Component/: AudioPlayer.cpp  ComponentBase.cpp  CursorChanger.cpp  DragDropSource.cpp  DragDropTarget.cpp  EventTrigger.cpp  InputBlocker.cpp  Label.cpp  RectRenderer.cpp  ShapeRenderer.cpp  Sprite.cpp  SubCanvas.cpp  TextArea.cpp  TextBox.cpp  TextureFontLabel.cpp  Toggle.cpp  Tween.cpp  UISound.cpp
src/Layout/: FlowLayout.cpp  HorizontalLayout.cpp  VerticalLayout.cpp
tests/NocoUITests/: CMakeLists.txt  Main.cpp  TestCanvas.cpp  TestComplexLayout.cpp  TestComponent.cpp  TestComponentFactory.cpp  TestConstraint.cpp  TestErrorCases.cpp  TestEventHandling.cpp  TestHitTest.cpp  TestLayout.cpp  TestNode.cpp  TestNode_findNext.cpp  TestNode_findNextPrevious_Complex.cpp  TestNode_findPrevious.cpp  TestParam.cpp  TestParent.cpp  TestPlaceholderComponent.cpp  TestProperty.cpp  TestPropertyValue.cpp  TestRegion.cpp  TestRegionConstraints.cpp  TestSerialization.cpp  TestSerializationDetails.cpp  TestStyleState.cpp  TestTextArea.cpp  TestTextBox.cpp  TestTextBoxTag.cpp  TestToggle.cpp  TestTransformEffectHitTest.cpp  TestTransformHitTest.cpp  TestTween.cpp
